--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PaselleSpla — Privacy Policy</title>
+  <title>TCS&M — Privacy Policy</title>
   <style>
     body{font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;line-height:1.6;color:#222;margin:0;padding:20px;background:#f7f7f9}
     .container{max-width:900px;margin:24px auto;background:#fff;padding:28px;border-radius:8px;box-shadow:0 6px 18px rgba(15,15,15,0.06)}
@@ -19,10 +19,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Privacy Policy for PaselleSpla</h1>
+    <h1>Privacy Policy for TCS&amp;M</h1>
     <p class="small">Effective date: October 16, 2025</p>
 
-    <p>Welcome — PaselleSpla ("we", "our", or "us") respects your privacy and is committed to protecting the personal information you share with us. This Privacy Policy explains what information we collect, how we use and share it, your choices, and how to contact us. By using or accessing PaselleSpla (the "App"), you agree to the collection and use of information as described in this policy.</p>
+    <p>Welcome — TCS&amp;M ("we", "our", or "us") respects your privacy and is committed to protecting the personal information you share with us. This Privacy Policy explains what information we collect, how we use and share it, your choices, and how to contact us. By using or accessing TCS&amp;M (the "App"), you agree to the collection and use of information as described in this policy.</p>
 
     <h2>1. Information We Collect</h2>
     <h3>1.1 Information You Provide</h3>
@@ -56,7 +56,7 @@
     <p>We will not sell your personal information. We may share information as described below:</p>
     <ul>
       <li><strong>Service providers:</strong> vendors that perform services on our behalf (hosting, analytics, email delivery). They are contractually limited from using your information for any other purpose.</li>
-      <li><strong>Legal requests:</strong> if required by law, regulation, or legal process, or to protect the rights, property, or safety of PaselleSpla, our users, or the public.</li>
+      <li><strong>Legal requests:</strong> if required by law, regulation, or legal process, or to protect the rights, property, or safety of TCS&amp;M, our users, or the public.</li>
       <li><strong>Business transfers:</strong> in connection with a merger, acquisition, reorganization, asset sale, or bankruptcy. We will notify affected users where required by law.</li>
       <li><strong>Aggregated or de-identified information:</strong> we may share non-identifying, aggregated data for analytics or research.</li>
     </ul>
@@ -91,7 +91,7 @@
     <p>To exercise your rights or make choices, contact us at <a href="mailto:ludvikcernosek@gmail.com">ludvikcernosek@gmail.com</a>. We may ask you to verify your identity before fulfilling requests.</p>
 
     <h2>11. California Privacy Rights (CCPA/CPRA)</h2>
-    <p>If you are a California resident, you may have additional rights under the California Consumer Privacy Act (CCPA) and the California Privacy Rights Act (CPRA), including the right to know, delete, and opt-out of sale of personal information. PaselleSpla does not sell personal information for money. To submit a request under California law, please contact us at the email address above and include &quot;California Privacy Request&quot; in the subject line.</p>
+    <p>If you are a California resident, you may have additional rights under the California Consumer Privacy Act (CCPA) and the California Privacy Rights Act (CPRA), including the right to know, delete, and opt-out of sale of personal information. TCS&amp;M does not sell personal information for money. To submit a request under California law, please contact us at the email address above and include &quot;California Privacy Request&quot; in the subject line.</p>
 
     <h2>12. Links to Other Sites</h2>
     <p>The App may contain links to third-party websites or services. We are not responsible for the privacy practices or content of those third parties. We encourage you to read their privacy policies.</p>
@@ -101,11 +101,11 @@
 
     <h2>14. Contact Us</h2>
     <p>If you have questions, concerns, or requests about this Privacy Policy or our data practices, please contact:</p>
-    <p><strong>PaselleSpla</strong><br>
+    <p><strong>TCS&amp;M</strong><br>
     Email: <a href="mailto:ludvikcernosek@gmail.com">ludvikcernosek@gmail.com</a></p>
 
     <footer>
-      <p>Thank you for using PaselleSpla. Your trust matters to us.</p>
+      <p>Thank you for using TCS&amp;M. Your trust matters to us.</p>
     </footer>
   </div>
 </body>
